--- a/frontend/src/components/uploadImg.css
+++ b/frontend/src/components/uploadImg.css
@@ -34,7 +34,7 @@ h1 {
 	color: #bdbdbd;
 }
 
-button {
+.btn {
 	border: 1px solid transparent;
 	padding: 0.6em 1.2em;
 	font-size: 1em;
@@ -46,12 +46,13 @@ button {
 	background: #2f80ed;
 	border-radius: 8px;
 	outline: none;
+	color: white;
 }
 
-button:hover {
+.btn:hover {
 	border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+.btn:focus,
+.btn:focus-visible {
 	outline: 2px auto -webkit-focus-ring-color;
 }
