--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+	background-color: #fafafb;
 }
 
 a {
