--- a/frontend/src/components/uploadSuccess.css
+++ b/frontend/src/components/uploadSuccess.css
@@ -15,6 +15,9 @@ h2 {
 
 .uploadSuccess__wrapper img {
 	max-width: 338px;
+	height: 224px;
+	margin: 25.5px 0;
+	border-radius: 12px;
 }
 
 .icon__wrapper {
@@ -38,6 +41,7 @@ h2 {
 	border-radius: 8px;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 }
 
 .input__wrapper input {
@@ -46,7 +50,6 @@ h2 {
 	background: transparent;
 	display: block;
 	margin: 11px 7px 11px;
-	padding: 2px;
 }
 
 .btn__copy {
@@ -60,7 +63,7 @@ h2 {
 	font-weight: 500;
 	font-size: 10px;
 	line-height: 12px;
-	height: 30px;
+	height: 35px;
 	width: 74px;
 	text-align: center;
 	letter-spacing: -0.035em;
