--- a/frontend/src/components/uploadImg.css
+++ b/frontend/src/components/uploadImg.css
@@ -23,6 +23,10 @@ h1 {
 
 .uploadImg__wrapper-img img {
 	margin-bottom: 38px;
+	height: 88px;
+	width: 114px;
+	object-fit: cover;
+	object-position: top;
 }
 
 .uploadImg__wrapper-img span {
